# mostx

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py  test.py
examples/: debug_mostx_quiz.py  debug_sort_quiz.py  play_sort_quiz.py
mostx/: __init__.py  _impl.py  datatypes.py
mostx/langs/: chinese.py  english.py  japanese.py  korean.py
mostx/translator/: en.py  ja.py  ko.py  zh.py
refuge/: _impl.py  en.py  zh.py
tests/: test_quizgenerator.py  test_translator_en.py  test_translator_ja.py  test_translator_ko.py  test_translator_zh.py
tests/langs/: test_chinese.py  test_english.py  test_japanese.py  test_korean.py
