[tool.poetry]
name = "mostx"
version = "0.1.1dev"
description = "Quiz Generator"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/gottadiveintopython/mostx'
homepage = 'https://github.com/gottadiveintopython/mostx'
keywords = ['Quiz', 'Game']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Education',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Topic :: Education',
    'Topic :: Software Development :: Libraries :: Python Modules',
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
